// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 1`] = `
<div>
  <div
    class="sc-jKJlTe ldyqSs"
  >
    <div
      class="sc-bdVaJa kwzqrW"
    >
      Completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 2`] = `
<div>
  <div
    class="sc-jKJlTe ldyqSs"
  >
    <div
      class="sc-jAaTju HNQcN"
    >
      <div
        class="sc-gPEVay cCneIg"
      >
        Max column width:
        <input
          class="sc-iRbamj CdawG"
          max="3"
          min="3"
          type="range"
          value="70"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="sc-bxivhb hvMtW"
  >
    <div
      class="sc-iAyFgw dSavTh"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView does not display bodyMessage if rows 1`] = `
<div>
  <div
    class="sc-bxivhb hvMtW"
  >
    <pre
      class="sc-eNQAEJ gACFMe"
    >
      ╒═══╕
│"x"│
╞═══╡
│"y"│
└───┘
    </pre>
  </div>
</div>
`;
